--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-<<<<<<< HEAD
 body {
+  direction: rtl;
   overflow-x: hidden;
 }
 .navbar{
@@ -125,138 +125,25 @@ div.sidebar-wrapper {
     margin-right: 0;
   }
 }
-
-=======
-body {
-  overflow-x: hidden;
+/*THis is For All*/
+.page-content-wrapper .panel-heading{
+ margin-top: 20px;
+ margin-bottom: 20px;
+ border-bottom: 2px solid#aaa;
+ /*THis is For All*/
 }
-.navbar{
-  border-bottom: 2px solid #fff;
+/*Start Table style*/
+.page-content-wrapper .panel-body .form-control{
+  border-radius: 0;
+  margin-bottom: 15px;
 }
-/*Brand Name*/
-.navbar a.navbar-brand {
-    font-weight: bold;
-    margin-right: 15px;
+.page-content-wrapper .panel-body .custom-file-label{
+  border-radius: 0;
 }
-/*wrapper*/
-#wrapper {
-  padding-left: 0;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+.page-content-wrapper .panel-body .send{
+  margin-top: 15px;
 }
-#wrapper.toggled {
-  padding-right: 250px;
+.page-content-wrapper .panel-body .send .btn{
+  margin-left: 10px;
 }
-.sidebar-wrapper {
-  z-index: 1000;
-  position: fixed;
-  right: 250px;
-  width: 0;
-  height: 100%;
-  margin-right: -250px;
-  overflow-y: auto;
-  background-color: #007bff;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-#wrapper.toggled .sidebar-wrapper {
-  width: 250px;
-}
-.sidebar-wrapper button{
-  position: absolute;
-  top: 450px;
-  left: 80px;
-  width: 100px;
-}
-div.page-content-wrapper,
-div.sidebar-wrapper {
-    top: 50px;
-  }
-.page-content-wrapper {
-  width: 100%;
-  position: absolute;
-  padding: 15px;
-}
-#wrapper.toggled .page-content-wrapper {
-  position: absolute;
-  margin-right: 0px;
-}
-/*Start Sidebar Styles */
-.sidebar-nav {
-  position: absolute;
-  top: 0;
-  width: 250px;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.sidebar-nav li {
-  text-indent: 20px;
-  line-height: 40px;
-  padding-top: 20px;
-  padding-left: 15px;
-}
-.sidebar-nav li a{
-  display: block;
-  text-decoration: none;
-  color: #fff;
-}
-.sidebar-nav li a:hover {
-  text-decoration: none;
-  color: #eee;
-  background: rgba(255, 255, 255, 0.2);
-}
-.sidebar-nav li.hvr-backward{
-  display: block;
-}
-.sidebar-nav li a i{
-  padding-left: 15px;
-}
-.sidebar-wrapper ul::after{
-    content: '';
-    display: block;
-    width: 100%;
-    height: 2px;
-    margin-top: 15px;
-    right: 0;
-    left: 0;   
-    background-color: #fff;
-}
-/*End Sidebar Styles */
-@media(min-width:768px) {
-
-  a.navbar-brand.mr-auto{
-    margin-right: 17px;
-  }
-  #wrapper {
-    padding-left: 0;
-  }
-  #wrapper.toggled {
-    padding-right: 250px;
-  }
-  .sidebar-wrapper {
-    width: 0;
-  }
-  #wrapper.toggled .sidebar-wrapper {
-    width: 250px;
-  }
-  #page-content-wrapper {
-    padding: 20px;
-    position: relative;
-  }
-  #wrapper.toggled .page-content-wrapper {
-    position: relative;
-    margin-right: 0;
-  }
-}
-/**/
-.page-content-wrapper .heading{
-  border-bottom: 2px solid#eee;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
->>>>>>> eb207e38fe29f5bd30228b10287c0837e3747695
+/*End Table Style*/
