--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,14 @@ background-color: #aaa;
   left: 5px;
   margin-right: 0px;
 }
+.page-content-wrapper .panel-heading h1{
+  color: #555555;
+}
 /*End Poblic Style*/
 .navbar{
   background-color: #060606!important; 
-  box-shadow: 0 2px 3px #aaa;
+  /*box-shadow: 0 2px 3px #aaa;*/
+  border-bottom: 2px solid #777;
 }
 /*Brand Name*/
 .navbar a.navbar-brand {
@@ -201,6 +205,7 @@ transform: scale(1.2,1.2);
 .page-content-wrapper .panel-body .form-row label{
   font-weight: bold;
   margin-top: 15px;
+  color: #555555;
 }
 .page-content-wrapper .panel-body .send{
   margin-top: 40px;
