--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,7 @@ body {
  border-bottom: 2px solid #aaa;
 }
 .btn{
-  border:0;
-  background-color: #000;
-  transition: all .4s ease-in-out;
-}
-.btn:hover{
-background-color: #aaa;
+  border:2px solid #ffc107;
 }
 .btn,
 .form-control,
@@ -65,12 +60,6 @@ background-color: #aaa;
 #wrapper.toggled .sidebar-wrapper {
   width: 250px;
 }
-.sidebar-wrapper button{
-  position: absolute;
-  top: 450px;
-  left: 80px;
-  width: 100px;
-}
 div.page-content-wrapper,
 div.sidebar-wrapper {
     top: 50px;
@@ -114,16 +103,6 @@ div.sidebar-wrapper {
 .sidebar-nav li a i{
   padding-right: 15px;
 }
-.sidebar-wrapper ul::after{
-    content: '';
-    display: block;
-    width: 100%;
-    height: 2px;
-    margin-top: 15px;
-    right: 0;
-    left: 0;   
-    background-color: #aaa;
-}
 .custom-file {
   margin-top: 10px;
 }
@@ -164,6 +143,7 @@ div.sidebar-wrapper {
   border: 0;
   background: none;
   transition: all .4s ease-in-out;
+  cursor: pointer;
 }
 .page-content-wrapper .panel-body .table .dropdown button:hover{
 transform: scale(1.2,1.2);
