--- a/css/style.css
+++ b/css/style.css
@@ -213,3 +213,45 @@ transform: scale(1.2,1.2);
 
 }
 /*End Body Media Query*/
+/*Start Loading*/
+.loading-overlay{
+  background-color: rgba(253, 165, 62, .3);
+  color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  display: none;
+}
+.spinner {
+  width: 100px;
+  height: 100px;
+  margin: 300px auto;
+  animation: rotate 1.4s infinite ease-in-out, background 1.4s infinite ease-in-out alternate;
+}
+
+@keyframes rotate {
+  0% {
+    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+  }
+  50% {
+    transform: perspective(120px) rotateX(-180deg) rotateY(0deg);
+  }
+  100% {
+    transform: perspective(120px) rotateX(-180deg) rotateY(-180deg);
+  }
+}
+@keyframes background {
+  0% {
+  background-color: #27ae60;
+  }
+  50% {
+    background-color: #9b59b6;
+  }
+  100% {
+    background-color: #c0392b;
+  }
+}
+/*End Loading*/
