Add some styling and js

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ body {
 }
 div.page-content-wrapper,
 div.sidebar-wrapper {
-    top: 61px;
+    top: 60px;
 }
 .page-content-wrapper {
   width: 100%;
@@ -214,3 +214,62 @@ transform: scale(1.2,1.2);
 }
 /*End Table Style*/
 /*End Body Media Query*/
+
+
+
+/* Responsive Table Start */
+
+@media only screen and (max-width: 800px) {
+
+  /* Force table to not be like tables anymore */
+  #it-is-responsive-table table,
+  #it-is-responsive-table thead,
+  #it-is-responsive-table tbody,
+  #it-is-responsive-table th,
+  #it-is-responsive-table td,
+  #it-is-responsive-table tr {
+    display: block;
+  }
+
+  /* Hide table headers (but not display: none;, for accessibility) */
+  #it-is-responsive-table thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+
+  #it-is-responsive-table tr { border: 1px solid #ccc; }
+
+  #it-is-responsive-table td {
+    /* Behave  like a "row" */
+    border: none;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    white-space: normal;
+  }
+
+  #it-is-responsive-table td:before {
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 6px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+    text-align:left;
+    font-weight: bold;
+  }
+
+  /*
+  Label the data
+  */
+  #it-is-responsive-table td:before { content: attr(data-title); }
+
+  /* Responsive Admin Tabs*/
+  .admin-reports .reports-item {
+    width: 100%;
+  }
+}
+
+/* Responsive Table End*/
